--- a/frontEnd/css/card.css
+++ b/frontEnd/css/card.css
@@ -8,26 +8,26 @@
 
 
 
-.hero-container {
+.hero-container,#hero-container {
   margin: auto;
   display: flex;
 }
 
-.main-container {
+.main-container ,#main-container {
   width: 270px;
   height: 540px;
   position: relative;
   margin: 0 20px;
 }
 
-.poster-container {
+.poster-container,#poster-container {
   width: 230px;
   position: absolute;
   top: 0;
   left: 35px;
   /* z-index: 9999; */
 }
-.poster-container3 {
+.poster-container3,#poster-container3 {
     width: 90%;
     display: flex;
     
@@ -36,16 +36,16 @@
     /* z-index: 9999; */
   }
 
-.poster {
+.poster,#poster {
   width: 100%;
   box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.6);
 }
-.poster1{
+.poster1,#poster1{
     width: 90%;
     box-shadow: 0 5px 15px 3px rgba(0, 0, 0, 0.6);
   }
 
-.ticket-container {
+.ticket-container,#ticket-container {
   background: #fff;
   width: 270px;
   height: 580px;
@@ -59,7 +59,7 @@
   opacity: 0;
 }
 
-.main-container:hover .ticket-container {
+.main-container:hover .ticket-container,#main-container:hover #ticket-container {
   opacity: 1;
   animation: bounceIn 0.6s linear;
 }
@@ -115,30 +115,30 @@
   }
 } */
 
-.ticket__content {
+.ticket__content,#ticket__content {
   width: 100%;
   position: absolute;
   bottom: 0;
   text-align: center;
 }
 
-.ticket__movie-title {
+.ticket__movie-title,#ticket__movie-title {
   text-transform: uppercase;
   margin-bottom: 5px;
 }
 
-.ticket__movie-slogan {
+.ticket__movie-slogan,#ticket__movie-sloga {
   color: #999;
   font-size: 0.9rem;
   margin-bottom: 20px;
 }
 
-.ticket__current-price {
+.ticket__current-price,#ticket__current-price{
   font-size: 1rem;
   font-weight: bold;
 }
 
-.ticket__buy-btn {
+.ticket__buy-btn,#icket__buy-btn {
   cursor: pointer;
   width: 100%;
   background: #92E3A9;
